corrected mnior spellings

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           These days, we all need to look our best and stay fit. That’s why Yoga, Weight Lifting, 
           and Aerobics are becoming popular activities among health and fitness minded individuals.
           <br><br></p>
-          <p class="fs-3 pt-2">Don't wait to hit the gym. Our exclusive magazine is filled with useful
+          <p class="fs-3 pt-2">Don't wait to hit the gym. Our exclusive e-magazine is filled with useful
            workouts and tips to stay active right at home - giving you everything you need to reach your 
            goals in no time at all!</p>
         <a href="featured.html" class="btn btn-dark m-2" alt="Button" title="Click this Button">Begin your Journey</a>
