--- a/beginner.html
+++ b/beginner.html
@@ -43,6 +43,7 @@ a .dropdown-item:hover{
 }
 </style>
 <body>
+  <!-- nav area -->
   <div class="container" id="Top">
     <nav class="navbar navbar-expand-lg d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
@@ -427,10 +428,12 @@ a .dropdown-item:hover{
 
       <p><b>How to Do It:</b> 
         <ol>
-          <li>     Stand with knees slightly bent. Bend at your hips and slowly reach down and touch your toes.</li>
-          <li> Place hands on the floor, then “crawl” them away from your torso until you’re in a plank position.</li>
-          <li> Take insect-size
-            steps forward until feet meet hands. Repeat 10 counts 3 sets</li>
+          <li> Stand and lock in your belly. </li>
+          <li> Take a big enough step back..</li>
+          <li> Bend both your front and your back knee to a 90-degree angle.</li>
+          <li> Step feet back together. </li>
+          <li> Repeat the movement on the other side. </li>
+          <li> Continue alternating legs for 45 seconds. Do 4 sets, resting for 15 seconds after each set, Watkins recommends.</li>
         </ol>
     </div>
   </div>
@@ -442,26 +445,21 @@ a .dropdown-item:hover{
     </div>
     <div class="col-lg-5 pt-3">
       <p>Mastered the reverse lunge? Congrats! Time to advance to the split squat, the reverse lunge’s feistier cousin.
-
         Split squats work the same muscles as lunges (quads, glutes, calves, core, hamstrings). But because split squats require 
         getting into a lunge position and moving within that position (unlike reverse lunges, which involve dynamically moving into 
         and out of the position), they work the muscles to a greater range of motion.
-        
         There are a few variations of the split squat, we recommends starting with the equipment-free bodyweight version. 
       </p>
 
       <p><b>How to Do It:</b> 
         <ol>
-          <li>    Stand with feet under hips.</li>
-          <li> Take a big step back and descend until front and back knees are both bent at a 90-degree angle.
-          </li>
-          <li>  Keeping your feet where they are, straighten both legs.
-          </li>
-          <li>Repeat this movement for 12–16 reps.
-            Switch lead legs and do the same thing on the other side.</li>
+          <li>Stand with feet under hips.</li>
+          <li>Take a big step back and descend until front and back knees are both bent at a 90-degree angle.</li>
+          <li>Keeping your feet where they are, straighten both legs.</li>
+          <li>Repeat this movement for 12–16 reps.</li>
+          <li>Switch lead legs and do the same thing on the other side.</li>
         </ol>
       </p>
-
     </div>
   </div>
 
@@ -474,16 +472,17 @@ a .dropdown-item:hover{
       <p>Squats are popular with weightlifters, which can lead to the misperception that they can be done only with weights. 
         But even squatting with your bodyweight alone can give you strong leg muscles if you do it with good form. 
       </p>
-
       <p><b>How to Do It:</b> 
         <ol>
           <li>Stand with feet slightly wider than shoulder width.</li>
-          <li>Extend arms straight with palms facing down. 
+          <li>Extend arms straight with palms facing down.</li>
+          <li>Inhale and push hips back slightly as you bend your knees.
+             Look straight ahead and keep chin up, shoulders upright, andback straight.
           </li>
-          <li>    Inhale and push hips back slightly as you bend your knees. Look straight ahead and keep chin up, shoulders upright, and
-            back straight.</li>
-          <li>  Squat as low as you comfortably can, aiming to have your hips sink below your knees. Engage your core to 
-            push upward explosively from your heels.</li>
+          <li> Squat as low as you comfortably can, aiming to have your hips sink below 
+            your knees. Engage your core to 
+            push upward explosively from your heels.
+          </li>
           <li>Do 10 counts 3 sets</li>
         </ol>
       </p>
@@ -504,14 +503,10 @@ a .dropdown-item:hover{
 
       <p><b>How to Do It:</b> 
         <ol>
-          <li>      Lie faceup with legs extended and arms straight overhead.</li>
-          <li>        
-            Press your lower back into the floor and raise arms and legs 6–12 inches off the floor.
-    </li>
-          <li> Chillax there for 30 seconds.
-          </li>
-          <li>Take a 15-second break before holding for another 30 seconds.
-          </li>
+          <li>Lie faceup with legs extended and arms straight overhead.</li>
+          <li>Press your lower back into the floor and raise arms and legs 6–12 inches off the floor.</li>
+          <li> Chillax there for 30 seconds.</li>
+          <li>Take a 15-second break before holding for another 30 seconds.</li>
           <li>Do 4 sets</li>
         </ol>
       </p>
@@ -529,18 +524,15 @@ a .dropdown-item:hover{
         and it requires little to no equipment. 
       </p>
       <p>This can also be done by anyone of any fitness level. So, if you want to try the test, this guide will explain what you need to know, specifically 
-        how to do a curl up with optimal form.</p>
-
+        how to do a curl up with optimal form.
+      </p>
       <p><b>How to Do It:</b> Here is a simple step-by-step guide for how to do the abdominal curl-up test. The curl-up test is not a timed test, but a test 
         that involves performing repetitions in time with a metronome until muscular failure. 
         <ol>
-          <li>  Find a flat space and a comfortable mat to lie down on.
-          </li>
+          <li>  Find a flat space and a comfortable mat to lie down on.</li>
           <li>Get into position, with the knees bent and the back flat on the floor.</li>
-          <li>Start the metronome and perform the first abdominal curl.
-          </li>
-          <li> Keep performing a single abdominal curl in time with the metronome.
-          </li>
+          <li>Start the metronome and perform the first abdominal curl.</li>
+          <li> Keep performing a single abdominal curl in time with the metronome.</li>
           <li> Count each curl-up. The test ends when the abdominal curls can no longer be executed in time with the metronome.</li>
         </ol>
       </p>
@@ -604,7 +596,6 @@ a .dropdown-item:hover{
         any necessary adjustments and improvements. This will help reduce chance of injury, increase speed,
         and boost efficiency. 
       </p>
-
       <p> <b>How to Do It:</b>
         <ol>
           <li>While jogging, maintain good posture, engage your core, and gaze forward</li>
@@ -617,7 +608,6 @@ a .dropdown-item:hover{
           </li>
         </ol>
       </p>
-
     </div>
   </div>
 
@@ -634,7 +624,6 @@ a .dropdown-item:hover{
         They’re also relatively easy exercises to perform because they can be practiced anywhere — no gym or 
         equipment required.
       </p>
-
       <p> <b>How to Do It:</b>
         <ol>
           <li> Stand with your feet hip-width apart. Lift up your left knee to your chest.</li>
@@ -646,7 +635,6 @@ a .dropdown-item:hover{
             and cardiovascular system.</li>
         </ol>
       </p>
-
     </div>
   </div>
 
@@ -662,7 +650,6 @@ a .dropdown-item:hover{
        behind mountain climbers. Performed from a plank position, you'll alternate bringing one knee to your chest, then 
        back out again, speeding up each time until you're "running" against the floor. 
       </p>
-
       <p> <b>How to Do It:</b> 
         <ol>
           <li>Get into a plank position, making sure to distribute your weight evenly between your hands and your toes.</li>
@@ -672,7 +659,6 @@ a .dropdown-item:hover{
           <li>Keep your hips down and run your knees in and out as far and as fast as you can. Alternate inhaling and exhaling with each leg change.</li>
         </ol>
       </p>
-
     </div>
   </div>
 
@@ -686,7 +672,6 @@ a .dropdown-item:hover{
         Jumping jacks are a great full body exercise that enhances aerobic fitness, strengthens the body, and promotes relaxation. 
         This exercise also improves muscle endurance, increases the body’s metabolic rate, and helps with weight loss.
       </p>
-
       <p> <b>How to Do It:</b> 
         <ol>
           <li>Stand straight with your feet together and hands by your sides.</li>
@@ -696,7 +681,6 @@ a .dropdown-item:hover{
           <li>Do 15 repeats 3 sets</li>
         </ol>
       </p>
-
     </div>
   </div>
 
@@ -711,7 +695,6 @@ a .dropdown-item:hover{
         If you like to dance, Zumba is a fun choice for an aerobic workout. After warming up, your Zumba video will 
         instruct you through easy-to-follow dance moves set to upbeat music. You’ll finish with a cool down and stretch.  
       </p>
-
       <p> <b>How to Do It:</b> 
         <ol>
           <li>Open up your smart device tv, mobile phone or computer/laptop</li>
@@ -719,7 +702,6 @@ a .dropdown-item:hover{
           <li>Start dancing!</li>
         </ol>
       </p>
-
     </div>
   </div>
 
@@ -735,7 +717,6 @@ a .dropdown-item:hover{
         <br><br>
         With indoor cycling, you don’t have to be concerned about traffic, road conditions, or the elements. You can work out safely at a comfortable temperature any time of the year. 
       </p>
-
       <p> <b>How to Do It:</b> 
         <ol>
           <li>Start off pedaling at a low intensity for 5-10 minutes</li>
@@ -750,7 +731,6 @@ a .dropdown-item:hover{
           <li>Finish by pedaling at a low intensity for 5 minutes.</li>
         </ol>
       </p>
-
     </div>
   </div>
 
@@ -768,7 +748,6 @@ a .dropdown-item:hover{
         and your bones will get stronger. Walking also eases stress, helps you sleep better, and can boost your 
         outlook on life.
       </p>
-      
       <p> <b>How to Do It:</b> 
         <ol>
          <li><b>Outdoors:</b>Yes. You can walk around your neighborhood, on a school track, or through a nature 
@@ -784,7 +763,6 @@ a .dropdown-item:hover{
         <p>Walking is an ideal type of exercise when you're just getting started. You can go as fast or as slow as you need.
           It’s easy to bump up your pace and go longer distances as you get better.</p>
       </p>
-
     </div>
   </div>
 
@@ -802,7 +780,7 @@ a .dropdown-item:hover{
         </li>
       </ul>
     </nav>
-  <!-- FOOTER DETAILS FOR IMPROVEMENT -->
+  <!-- FOOTER DETAILS -->
   <div class="card text-center bg-dark bg-gradient text-white">
     <div class="card-header h1">
       Breathe
