--- a/featured.html
+++ b/featured.html
@@ -23,6 +23,7 @@
 
 </style>
 <body>
+   <!-- nav area -->
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
@@ -167,7 +168,7 @@
   </div>
 </div>
 
-  <!-- FOOTER DETAILS FOR IMPROVEMENT -->
+  <!-- FOOTER DETAILS -->
   <div class="card text-center bg-dark bg-gradient text-white">
     <div class="card-header h1">
       Breathe
