--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,7 @@
 
 </style>
 <body>
+   <!-- nav area -->
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
@@ -432,8 +433,7 @@
     </div>
   </div>
 
-
-<!-- FOOTER DETAILS FOR IMPROVEMENT -->
+<!-- FOOTER DETAILS -->
 <div class="card text-center bg-dark bg-gradient text-white mt-5">
   <div class="card-header h1">
     Breathe
