--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
   </div>
 
-<!-- FOOTER DETAILS FOR IMPROVEMENT -->
+<!-- FOOTER DETAILS -->
   <div class="card text-center bg-dark bg-gradient text-white">
     <div class="card-header h1">
       Breathe
