--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
 
 </style>
 <body>
+   <!-- nav area -->
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
@@ -33,28 +34,22 @@
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarbreathe">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="index.html">Home</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="featured.html">Featured</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
-
           <li class="nav-item">
             <div class="dropdown">
               <button class="btn bg-transparent dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
-
               <ul class="dropdown-menu bg-dark">
                 <li><a class="dropdown-item text-white" href="beginner.html#yogastart">Yoga</a></li>
                 <li><a class="dropdown-item text-white" href="beginner.html#Strength">Strength Training</a></li>
@@ -62,7 +57,6 @@
               </ul>
             </div>
           </li>
-
           <li class="nav-item">
             <a class="nav-link active text-bg-light mx-3 fs-5 rounded-5" aria-current="page" href="about.html">About Us</a>
           </li>
@@ -79,14 +73,12 @@
         of their time browsing through the internet. 
         This project will provide users a new way of accessing healthy life through exercise.
         </p>
-
         <p>
           The website target end user, it will be everyone, they can be various people anywhere 
           that uses internet and has access to smart phone, a tablet or a computer at anytime or 
           just 15mins of their free time. They can also access the website before doing their daily work, 
           studies or activities.
         </p>
-
         <p>
           The objective of the website is to provide access and information to people that doesn't have 
           much time to visit or exercise in a gym. To provide various work out routines such as yoga for 
@@ -108,11 +100,10 @@
         despite their sedentary work lifestyle. We strive to create a community of like-minded individuals who 
         are passionate about taking care of their bodies and minds. We envision a world where people prioritize 
         their health and well-being, and where exercise is seen as an essential part of everyone's daily routine.
-
       </p>
   </div>
 
-<!-- FOOTER DETAILS FOR IMPROVEMENT -->
+<!-- FOOTER DETAILS -->
     <div class="card text-center bg-dark bg-gradient text-white">
       <div class="card-header h1">
         Breathe
