--- a/beginner.html
+++ b/beginner.html
@@ -47,7 +47,7 @@ a .dropdown-item:hover{
   <div class="container" id="Top">
     <nav class="navbar navbar-expand-lg d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
-        <img src="Gallery/yoga/brlogomain.jpeg" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
+        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
       <button class="navbar-toggler border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
