--- a/about.html
+++ b/about.html
@@ -37,17 +37,17 @@
       <div class="collapse navbar-collapse" id="navbarbreathe">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5" href="index.html">Home</a>
+            <a class="nav-link text-white mx-3 fs-5" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5" href="featured.html">Featured</a>
+            <a class="nav-link text-white mx-3 fs-5" href="featured.html">Featured</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
+            <a class="nav-link text-white mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn bg-transparent dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn bg-transparent dropdown-toggle text-white mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
               <ul class="dropdown-menu bg-dark">
@@ -58,7 +58,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-bg-light mx-3 fs-5 rounded-5" aria-current="page" href="about.html">About Us</a>
+            <a class="nav-link active text-bg-dark text-white mx-3 fs-5 rounded-5" aria-current="page" href="about.html">About Us</a>
           </li>
         </ul>
       </div>
