--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
   border-style: ridge;
   border-radius: 10px;
 }
+
 .nav-link:hover {
   background-color: #ffffffa9;
   border-radius: 10px;
   transition: 0.65s;
 }
+
 </style>
 <body>
   <!-- NAV BAR WAS CREATED HERE AS NEW -->
@@ -54,7 +56,7 @@
       <a href="index.html" class="navbar-brand">
         <img src="Gallery/yoga/brlogomain.jpeg" class="imahe m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
-      
+
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
       aria-expanded="false" aria-label="Toggle navigation">
@@ -64,17 +66,17 @@
       <div class="collapse navbar-collapse" id="navbarbreathe">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active text-bg-light mx-3 fs-5 rounded-5" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active text-bg-dark mx-3 fs-5 rounded-5 text-white" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5" href="featured.html">Featured</a>
+            <a class="nav-link text-white mx-3 fs-5" href="featured.html">Featured</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
+            <a class="nav-link text-white mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn bg-transparent dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn bg-transparent dropdown-toggle text-white mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
 
@@ -86,7 +88,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
+            <a class="nav-link text-white mx-3 fs-5" href="about.html">About Us</a>
           </li>
         </ul>
       </div>
