--- a/beginner.html
+++ b/beginner.html
@@ -49,26 +49,26 @@ a .dropdown-item:hover{
       <a href="index.html" class="navbar-brand">
         <img src="Gallery/yoga/brlogomain.jpeg" class="imahe m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
-      <button class="navbar-toggler border-dark" type="button" data-bs-toggle="collapse"
+      <button class="navbar-toggler bg-light border-white" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
       aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon "></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarbreathe">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5" href="index.html">Home</a>
+            <a class="nav-link text-white mx-3 fs-5" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5 " href="featured.html">Featured</a>
+            <a class="nav-link text-white mx-3 fs-5 " href="featured.html">Featured</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
+            <a class="nav-link text-white mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn bg-light dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn bg-dark dropdown-toggle text-white mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
 
@@ -80,7 +80,7 @@ a .dropdown-item:hover{
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
+            <a class="nav-link text-white mx-3 fs-5" href="about.html">About Us</a>
           </li>
         </ul>
       </div>
