corrected image name

--- a/gallery.html
+++ b/gallery.html
@@ -358,7 +358,7 @@
           </div>
   
           <div class="carousel-item">
-            <a href="beginner.html#splitsquat" style="text-decoration: none; color: white;"><img src="Gallery/lift/splitsquat.JPG" class="d-block w-100 height-450" alt="..."></a>
+            <a href="beginner.html#splitsquat" style="text-decoration: none; color: white;"><img src="Gallery/lift/splitsquat.jpg" class="d-block w-100 height-450" alt="..."></a>
             <div class="carousel-caption">
               <h5>Split Squat</h5>
               <p>Curve the creation</p>
