changed breakpoints for navbar

--- a/beginner.html
+++ b/beginner.html
@@ -45,7 +45,7 @@ a .dropdown-item:hover{
 <body>
   <!-- nav area -->
   <div class="container" id="Top">
-    <nav class="navbar navbar-expand-lg d-flex flex-row-reverse">
+    <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
         <img src="Gallery/yoga/brlogomain.jpeg" class="imahe m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
