--- a/beginner.html
+++ b/beginner.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="breathe.css">
   <link rel="stylesheet" href="breathe.js">
-  <title>Breathe Home</title>
+  <title>Breathe Contents</title>
 </head>
 <style>
 
