--- a/beginner.html
+++ b/beginner.html
@@ -137,10 +137,10 @@ a .dropdown-item:hover{
 
   <div class="row mt-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2" id="mountain">1. Mountain Pose (Tadasana)</h4>
+        <h4 class="pt-2 display-4" id="mountain">1. Mountain Pose (Tadasana)</h4>
         <img src="Images/motheryoga.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>Also known as <i>"The mother of yoga poses"</i> it looks easy. This two-footed stance is the 
         foundation for many other positions that require awareness and balance. It is through this pose
         that one finds the proper alignment and shape for additional movements
@@ -164,10 +164,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2">2. Child’s Pose (Balasana)</h4>
+        <h4 class="pt-2 display-4">2. Child’s Pose (Balasana)</h4>
         <img src="Images/balasana.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>Consider this exercise your reset moment. Simple in design, this easy pose relaxes your nervous 
         system and is a great place to take a breather during class if you need one. Got knee problems? 
         Make sure to lower into this position with extra care.
@@ -188,10 +188,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2">3. Cat/Cow Pose (Marjaryasana to Bitilasana)</h4>
+        <h4 class="pt-2 display-4">3. Cat/Cow Pose (Marjaryasana to Bitilasana)</h4>
         <img src="Images/cow.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>Cat/cow is a great way to warm up your back, explains Ingber, and get your body ready for downward-facing
         dog. It also helps address mobility (hello, desk jobs) and work your core without the extra stress on your
           wrists and shoulders that you might feel in a down dog move.
@@ -214,10 +214,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2">4. Corpse Pose (Shavasana)</h4>
+        <h4 class="pt-2 display-4">4. Corpse Pose (Shavasana)</h4>
         <img src="Images/corpse.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>Lying around may seem pointless, but this is one of the most meditative moments in any yoga practice. 
         Corpse pose calms the mind, relieves stress and induces a relaxed state. (Why do you think yogis are so chill?)
       </p>
@@ -236,10 +236,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2" id="war1">5. Warrior I (Virabhadrasana I)</h4>
+        <h4 class="pt-2 display-4" id="war1">5. Warrior I (Virabhadrasana I)</h4>
         <img src="Images/warrior1.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>The first in the Warrior series, this pose strengthens your legs and opens your hips and chest, while also stretching 
       your arms and legs. While holding this exercise, you’ll see an increase in your concentration and balance — both essential 
       qualities to carry through a yoga practice.
@@ -264,10 +264,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2" id="war2">6. Warrior II (Virabhadrasana II)</h4>
+        <h4 class="pt-2 display-4" id="war2">6. Warrior II (Virabhadrasana II)</h4>
         <img src="Images/warrior2.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>Similar to Warrior I, Warrior II offers just a slight variation, with your upper body rotated to the side instead
         of facing forward. You’ll still reap the same quad-strengthening benefits of Warrior I, but you’ll also open up 
         your hip flexor muscles for greater flexibility.
@@ -287,10 +287,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2" id="dog">7. Downward-Facing Dog (Adho Mukha Svanansana)</h4>
+        <h4 class="pt-2 display-4" id="dog">7. Downward-Facing Dog (Adho Mukha Svanansana)</h4>
         <img src="Images/doggy.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>
         One of the most recognizable poses of the bunch, down dog is a great way to stretch your back, shoulders, arms,
         hamstrings and well, just about everything. And it gets you calm and centered, too.
@@ -357,7 +357,7 @@ a .dropdown-item:hover{
 
   <div class="row mt-3 text-white bg-dark border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2" id="wallpushup">Wall push-up "Endless"</h4>
+        <h4 class="pt-2 display-4" id="wallpushup">Wall push-up "Endless"</h4>
         <img src="Gallery/lift/str1.JPG"  class="object-fit-contain w-100 p-4" alt="">
     </div>
     <div class="col-lg-5 p-4">
@@ -390,10 +390,10 @@ a .dropdown-item:hover{
 
   <div class="row text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2">2. Superhuman</h4>
+        <h4 class="pt-2 display-4">2. Superhuman</h4>
         <img src="Gallery/lift/str2.JPG" class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>Known as the Superman before the ~gender revolution~, the superhuman is a super-duper pulling exercise.
         It’s i-n-c-r-e-d-i-b-l-y important to do some pulling exercises in your workout routine.
         Most of our day-to-day to-dos, like camping out on the computer and lounging on the lounger, neglect our 
@@ -418,10 +418,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2" id="reverselunge">3. Reverse lunge</h4>
+        <h4 class="pt-2 display-4" id="reverselunge">3. Reverse lunge</h4>
         <img src="Gallery/lift/str3.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>This bodyweight move is (almost) as much fun as it sounds. This is one creepy-crawly exercise that will have you 
         feeling like a little kid again while building your triceps, shoulders, chest, abs, glutes, and quads.
       </p>
@@ -440,10 +440,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2" id="splitsquat">4. Split squat</h4>
+        <h4 class="pt-2 display-4" id="splitsquat">4. Split squat</h4>
         <img src="Gallery/lift/str4.JPG" class="object-fit-contain w-100 p-2" alt="splitsquatter">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>Mastered the reverse lunge? Congrats! Time to advance to the split squat, the reverse lunge’s feistier cousin.
         Split squats work the same muscles as lunges (quads, glutes, calves, core, hamstrings). But because split squats require 
         getting into a lunge position and moving within that position (unlike reverse lunges, which involve dynamically moving into 
@@ -465,10 +465,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2" id="squat">5. Squat (Explosives)</h4>
+        <h4 class="pt-2 display-4" id="squat">5. Squat (Explosives)</h4>
         <img src="Gallery/lift/Squat.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>Squats are popular with weightlifters, which can lead to the misperception that they can be done only with weights. 
         But even squatting with your bodyweight alone can give you strong leg muscles if you do it with good form. 
       </p>
@@ -491,10 +491,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2">6. Hollow Hold</h4>
+        <h4 class="pt-2 display-4">6. Hollow Hold</h4>
         <img src="Gallery/lift/hollowhold.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>Quick: Picture a banana on a table. Got it? Great — you’ve basically got the gist of the hollow hold.
         But don’t let the fruit reference fool you. This movement gets spicy QUICK. It’s super good for strengthening your midsection.
         <br><br>
@@ -515,10 +515,10 @@ a .dropdown-item:hover{
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
     <div class="col-lg-7 text-center">
-        <h4 class="pt-2">7. Curl-Ups</h4>
+        <h4 class="pt-2 display-4">7. Curl-Ups</h4>
         <img src="Gallery/lift/curlups.jpeg"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-lg-5 pt-3">
+    <div class="col-lg-5 pt-3 fs-3">
       <p>
         Do you want to put your abdominal strength to the test? The curl-up abdominal test is a great way to assess abdominal strength and endurance, 
         and it requires little to no equipment. 
@@ -587,10 +587,10 @@ a .dropdown-item:hover{
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
     <div class="col-lg-6 text-center">
-        <h4 class="pt-2" id="jogging">1. Jogging</h4>
+        <h4 class="pt-2 display-4" id="jogging">1. Jogging</h4>
         <img src="Gallery/aero/jogging.jpeg"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-lg-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center fs-3">
       <p>
         If you want to elevate your jogging, it’s important to take a look at your jogging form and make
         any necessary adjustments and improvements. This will help reduce chance of injury, increase speed,
@@ -613,10 +613,10 @@ a .dropdown-item:hover{
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
     <div class="col-lg-6 text-center">
-        <h4 class="pt-2" id="highknee">2. High Knees</h4>
+        <h4 class="pt-2 display-4" id="highknee">2. High Knees</h4>
         <img src="Gallery/aero/highknee.jpg"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-lg-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center fs-3">
       <p>
         High Knees are a cardio-intensive exercise performed at a fast pace. It engages your core, strengthens 
         all the muscles in your legs, gets your heart rate up and improves momentum, coordination and flexibility.
@@ -640,10 +640,10 @@ a .dropdown-item:hover{
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
     <div class="col-lg-6 text-center">
-        <h4 class="pt-2" id="highknee">3. Mountain Climbers</h4>
+        <h4 class="pt-2 display-4" id="highknee">3. Mountain Climbers</h4>
         <img src="Gallery/aero/mountaineer.jpg"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-lg-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center fs-3">
       <p>
        Also known as Running planks.
        Climbing a mountain would be a daunting workout to most, but what if the mountain is the floor? That's the concept 
@@ -664,10 +664,10 @@ a .dropdown-item:hover{
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
     <div class="col-lg-6 text-center">
-        <h4 class="pt-2" id="jumpingjack">4. Jumping Jacks</h4>
+        <h4 class="pt-2 display-4" id="jumpingjack">4. Jumping Jacks</h4>
         <img src="Gallery/aero/jumpingjacks.png"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-lg-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center fs-3">
       <p>
         Jumping jacks are a great full body exercise that enhances aerobic fitness, strengthens the body, and promotes relaxation. 
         This exercise also improves muscle endurance, increases the body’s metabolic rate, and helps with weight loss.
@@ -686,10 +686,10 @@ a .dropdown-item:hover{
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
     <div class="col-lg-6 text-center">
-        <h4 class="pt-2">5. Zumba dance </h4>
+        <h4 class="pt-2 display-4">5. Zumba dance </h4>
         <img src="Gallery/aero/zumba.jpg"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-lg-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center fs-3">
       <p>
         Zumba is beneficial for heart health, improves coordination, tones your entire body, and may help relieve stress. 
         If you like to dance, Zumba is a fun choice for an aerobic workout. After warming up, your Zumba video will 
@@ -707,10 +707,10 @@ a .dropdown-item:hover{
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
     <div class="col-lg-6 text-center">
-        <h4 class="pt-2">6. Stationary Cycling</h4>
+        <h4 class="pt-2 display-4">6. Stationary Cycling</h4>
         <img src="Gallery/aero/station.jpg"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-lg-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center fs-3">
       <p>
         Riding a stationary exercise bike is an efficient and effective way to burn calories and body fat while strengthening your heart, lungs, and muscles.
         Compared to some other types of cardio equipment, a stationary bicycle puts less stress on your joints, but it still provides an excellent aerobic workout.
@@ -736,10 +736,10 @@ a .dropdown-item:hover{
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light my-2">
     <div class="col-lg-6 text-center">
-        <h4 class="pt-2" id="walking">7. Walking? Yes Walking!</h4>
+        <h4 class="pt-2 display-4" id="walking">7. Walking? Yes Walking!</h4>
         <img src="Gallery/aero/walking.webp"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-lg-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center fs-3">
       <p>
         Walking may be the simplest way to work out. You can do it almost anywhere, 
         and it’s a snap to get started: Just put one foot in front of the other.
