--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   body{
   background-image: linear-gradient(rgba(255, 255, 255,0.45),
-  rgba(0,0,0,0.75)), url(Gallery/yoga/breathemainlogo.jpeg);
+  rgba(0,0,0,0.75)), url(Gallery/yoga/contents.jpeg);
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
