added hover effects on other contents

--- a/beginner.html
+++ b/beginner.html
@@ -53,7 +53,7 @@ a .dropdown-item:hover{
       <button class="navbar-toggler bg-light border-white" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
       aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon "></span>
+      <span class="navbar-toggler-icon p-2"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarbreathe">
@@ -68,14 +68,14 @@ a .dropdown-item:hover{
             <a class="nav-link text-white mx-2 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <div class="dropdown meme4">
-              <button class="btn dropdown-toggle text-white text-bg-dark mx-3 fs-5 active" type="button" data-bs-toggle="dropdown" aria-expanded="false" aria-current="page">
+            <div class="dropdown">
+              <button class="btn dropdown-toggle text-white text-bg-dark mx-3 fs-5 active" id="meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false" aria-current="page">
                 Contents
               </button>
-              <ul class="dropdown-menu bg-dark">
-                <li><a class="dropdown-item text-white" href="#yogastart">Yoga</a></li>
-                <li><a class="dropdown-item text-white" href="#Strength">Strength Training</a></li>
-                <li><a class="dropdown-item text-white" href="#Aerobics">Aerobics</a></li>
+              <ul class="dropdown-menu meme4">
+                <li><a class="dropdown-item" href="#yogastart">Yoga</a></li>
+                <li><a class="dropdown-item" href="#Strength">Strength Training</a></li>
+                <li><a class="dropdown-item" href="#Aerobics">Aerobics</a></li>
               </ul>
             </div>
           </li>
@@ -771,11 +771,11 @@ a .dropdown-item:hover{
       <ul class="nav nav-pills meme2">
         <li class="nav-item dropup">
           <a class="nav-link dropdown-toggle meme3 bg-dark" title="Button to navigate"  data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Navigator</a>
-          <div class="dropdown-menu bg-dark">
-            <a  class="dropdown-item text-white" title="Navigate to Yoga Exercise" href="#Top">Back to Top</a>
-            <a  class="dropdown-item text-white" title="Navigate to Yoga Exercise" href="#yogaa">Yoga</a>
-            <a  class="dropdown-item text-white" title="Navigate to Yoga Strength" href="#strengthstart">Strength</a>
-            <a  class="dropdown-item text-white" title="Navigate to Yoga Aerobics"href="#aerostart">Aerobics</a>
+          <div class="dropdown-menu meme5">
+            <a  class="dropdown-item" title="Navigate to Top" href="#Top">Back to Top</a>
+            <a  class="dropdown-item" title="Navigate to Yoga" href="#yogaa">Yoga</a>
+            <a  class="dropdown-item" title="Navigate to Strength" href="#strengthstart">Strength</a>
+            <a  class="dropdown-item" title="Navigate to Aerobics"href="#aerostart">Aerobics</a>
           </div>
         </li>
       </ul>
