--- a/gallery.html
+++ b/gallery.html
@@ -55,15 +55,14 @@
           </li>
 
           <li class="nav-item">
-            <div class="dropdown meme4">
+            <div class="dropdown">
               <button class="btn bg-transparent dropdown-toggle text-white mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
-
-              <ul class="dropdown-menu bg-dark">
-                <li><a class="dropdown-item text-white" href="beginner.html#yogastart">Yoga</a></li>
-                <li><a class="dropdown-item text-white" href="beginner.html#Strength">Strength Training</a></li>
-                <li><a class="dropdown-item text-white" href="beginner.html#Aerobics">Aerobics</a></li>
+              <ul class="dropdown-menu meme4">
+                <li><a class="dropdown-item" href="beginner.html#yogastart">Yoga</a></li>
+                <li><a class="dropdown-item" href="beginner.html#Strength">Strength Training</a></li>
+                <li><a class="dropdown-item" href="beginner.html#Aerobics">Aerobics</a></li>
               </ul>
             </div>
           </li>
