--- a/index.html
+++ b/index.html
@@ -69,15 +69,14 @@
             <a class="nav-link text-white mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <div class="dropdown meme4">
-              <button class="btn bg-transparent dropdown-toggle text-white mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <div class="dropdown">
+              <button class="btn bg-transparent dropdown-toggle text-white text-bg-dark mx-3 fs-5 meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
-
-              <ul class="dropdown-menu bg-dark">
-                <li><a class="dropdown-item text-white" href="beginner.html#yogastart">Yoga</a></li>
-                <li><a class="dropdown-item text-white" href="beginner.html#Strength">Strength Training</a></li>
-                <li><a class="dropdown-item text-white" href="beginner.html#Aerobics">Aerobics</a></li>
+              <ul class="dropdown-menu meme4">
+                <li><a class="dropdown-item" href="beginner.html#yogastart">Yoga</a></li>
+                <li><a class="dropdown-item" href="beginner.html#Strength">Strength Training</a></li>
+                <li><a class="dropdown-item" href="beginner.html#Aerobics">Aerobics</a></li>
               </ul>
             </div>
           </li>
