add major changes on buttons not working due to override inline styling

--- a/gallery.html
+++ b/gallery.html
@@ -56,7 +56,7 @@
 
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn bg-transparent dropdown-toggle text-white mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn dropdown-toggle text-white mx-3 fs-5 meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
               <ul class="dropdown-menu meme4">
