--- a/beginner.html
+++ b/beginner.html
@@ -69,7 +69,7 @@ a .dropdown-item:hover{
           </li>
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn dropdown-toggle text-white text-bg-dark mx-3 fs-5 active" id="meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false" aria-current="page">
+              <button class="btn dropdown-toggle text-white text-bg-dark mx-3 fs-5 active meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false" aria-current="page">
                 Contents
               </button>
               <ul class="dropdown-menu meme4">
