--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </li>
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn bg-transparent dropdown-toggle text-white text-bg-dark mx-3 fs-5 meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn dropdown-toggle text-white mx-3 fs-5 meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
               <ul class="dropdown-menu meme4">
