--- a/featured.html
+++ b/featured.html
@@ -90,16 +90,16 @@
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
       <div class="card-body ">
-        <img src="Images/y3.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
-        <p class="card-text text-bg-dark p-4 fs-4">Yoga is an ancient practice that combines physical 
+        <img src="Images/y3.jpeg" class="card-img-top g-0 object-fit-contain border rounded-4" alt="">
+        <p class="card-text text-bg-dark p-4 fs-4 border rounded-4">Yoga is an ancient practice that combines physical 
           postures with mindfulnesstechniques in order to bring more balance into one’s life..
         </p>
       </div>
     </div>
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/y4.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
-        <p class="card-text text-bg-dark p-4 fs-4">Yoga is the ability to direct the mind exclusively 
+        <img src="Images/y4.jpeg" class="card-img-top g-0 object-fit-contain border rounded-4" alt="">
+        <p class="card-text text-bg-dark p-4 fs-4 border rounded-4">Yoga is the ability to direct the mind exclusively 
           toward an object and sustain that direction without any distractions.
         </p>
       </div>
@@ -120,16 +120,16 @@
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Gallery/lift/ss3.webp" class="card-img-top g-0 object-fit-contain border rounded" alt="">
-        <p class="card-text text-bg-dark p-4 fs-4">Weight lifting is an effective and efficient way for 
+        <img src="Gallery/lift/ss3.webp" class="card-img-top g-0 object-fit-contain border rounded-4" alt="">
+        <p class="card-text text-bg-dark p-4 fs-4 border rounded-4">Weight lifting is an effective and efficient way for 
         individuals to build muscle mass, strength, endurance and confidence
         </p>
       </div>
     </div>
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/a2.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
-        <p class="card-text text-bg-dark p-4 fs-4">Compound lifts are more challenging but less time 
+        <img src="Images/a2.jpeg" class="card-img-top g-0 object-fit-contain border rounded-4" alt="">
+        <p class="card-text text-bg-dark p-4 fs-4 border rounded-4">Compound lifts are more challenging but less time 
           consuming than performing multiple different isolation exercises. 
         </p>
       </div>
@@ -150,16 +150,16 @@
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Gallery/aero/mountainclimbers.webp" class="card-img-top g-0 object-fit-contain border rounded" alt="">
-        <p class="card-text text-bg-dark p-3 fs-4">Aerobics provide cardiovascular benefits as well 
+        <img src="Gallery/aero/mountainclimbers.webp" class="card-img-top g-0 object-fit-contain border rounded-4" alt="">
+        <p class="card-text text-bg-dark p-3 fs-4 border rounded-4">Aerobics provide cardiovascular benefits as well 
           as improving physical stamina and flexibility.
         </p>
       </div>
     </div>
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/a4.jpeg" class="card-img-top g-0 object-fit-contain border rounded " alt="">
-        <p class="card-text text-bg-dark p-3 fs-4"> To maintain a good health or to embrace a healthy
+        <img src="Images/a4.jpeg" class="card-img-top g-0 object-fit-contain border rounded-4" alt="">
+        <p class="card-text text-bg-dark p-3 fs-4 border rounded-4"> To maintain a good health or to embrace a healthy
            lifestyle, an individual needs to keep the body sparkling and strong.
         </p>
       </div>
