--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="d-flex justify-content-center m-5 text-light">
     <div class="row">
       <div class="col-lg-6 bg-dark rounded-4">
-        <h2 class="display-3">Fuel Your Workday with Exercise!</h2>
+        <h2 class="display-3">Fuel your work with Exercise!</h2>
         <p class="fs-3 pt-2">Breathe offers fitness guidance for desk workers or those on the go. 
           Aerobic exercices at the office, strength training you can do at home or anytime all 
           easily accessible from your smart devices.
