--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
   </div>
 <!-- NEW ROW FOR THE HOME BANNER PREVIEW -->
   <div class="container d-flex flex-row m-5 text-light p-2">
-    <div>
-      <div><h1 class="display-1">Breathe</h1></div>
-    </div>
+    <H2 class="display-1 text-center"><b>Breathe</b></H2>
   </div>
 
 <!-- LEFT AREA FOR THE BANNER TEXT -->
@@ -140,8 +138,8 @@
 
 <!-- FOOTER DETAILS -->
   <div class="card text-center bg-dark bg-gradient text-white">
-    <div class="card-header h1">
-      Breathe
+    <div class="card-header">
+      <H2 class="display-1"><b>Breathe</b></H2>
     </div>
     <div class="card-body">
       <h5 class="card-title">It never ends here</h5>
