--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
-        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 img-fluid rounded-5" alt="breathe logo">
+        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 m-3 img-fluid rounded-5" alt="breathe logo">
       </a>
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
