--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
-        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe m-3 p-3 img-fluid rounded-5" alt="breathe logo">
+        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 m-3 img-fluid rounded-5" alt="breathe logo">
       </a>
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
@@ -43,20 +43,20 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link text-white mx-3 fs-5" href="index.html">Home</a>
+            <a class="nav-link text-white mx-2 fs-5" href="index.html">Home</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link text-white mx-3 fs-5" href="featured.html">Featured</a>
+            <a class="nav-link text-white mx-2 fs-5" href="featured.html">Featured</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active text-bg-dark fs-5 rounded-5" aria-current="page" href="gallery.html">Gallery</a>
+            <a class="nav-link active text-bg-dark mx-2 fs-5 rounded-5" aria-current="page" href="gallery.html">Gallery</a>
           </li>
 
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn dropdown-toggle text-white mx-3 fs-5 meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn dropdown-toggle text-white mx-2 fs-5 meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
               <ul class="dropdown-menu meme4">
@@ -68,7 +68,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link text-white mx-3 fs-5" href="about.html">About Us</a>
+            <a class="nav-link text-white mx-2 fs-5" href="about.html">About Us</a>
           </li>
 
         </ul>
