--- a/beginner.html
+++ b/beginner.html
@@ -46,7 +46,7 @@ a .dropdown-item:hover{
 <body>
   <!-- nav area -->
   <div class="container" id="Top">
-    <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
+    <nav class="navbar navbar-expand-md d-flex">
       <a href="index.html" class="navbar-brand">
         <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 m-3 img-fluid rounded-5" alt="breathe logo">
       </a>
