--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <!-- NAV BAR WAS CREATED HERE AS NEW -->
   <div class="container">
-    <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
+    <nav class="navbar navbar-expand-md d-flex">
       <a href="index.html" class="navbar-brand">
         <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 m-3 img-fluid rounded-5" alt="breathe logo">
       </a>
