added title on 3 buttons

--- a/featured.html
+++ b/featured.html
@@ -85,7 +85,7 @@
         it can be easy to forget to prioritize your physical 
         and mental wellbeing.
       </p>
-      <a href="beginner.html" class="btn btn-dark m-2">Begin your Journey</a>
+      <a href="beginner.html" class="btn btn-dark m-2" title="This is a button to your Journey">Begin your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
@@ -115,7 +115,7 @@
       <p class="fs-3">You've decided to take the plunge and start your strength exercise journey. 
         It's exciting, but can be intimidating too. 
         Whether you're a beginner or advanced lifter, the key to success is consistency.</p>
-      <a href="beginner.html#karosel6" class="btn btn-dark m-2">Begin your Journey</a>
+      <a href="beginner.html#karosel6" class="btn btn-dark m-2" title="This is a button to your Journey">Begin your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
@@ -145,7 +145,7 @@
       <p class="fs-3">Aerobics can be done anytime and anywhere. From the comfort of your own home or workplace, 
         you can enjoy the benefits of aerobic exercise without ever having to leave your chair! 
       </p>
-      <a href="beginner.html#karosel7" class="btn btn-dark m-2">Begin your Journey</a>
+      <a href="beginner.html#karosel7" class="btn btn-dark m-2" title="This is a button to your Journey">Begin your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
