Added titles on social links

--- a/beginner.html
+++ b/beginner.html
@@ -788,10 +788,10 @@ a .dropdown-item:hover{
     <div class="card-body">
       <h5 class="card-title">It never ends here</h5>
       <p class="card-text">Our magazine is available online, so you can stay up-to-date on the latest health and fitness news anytime, anywhere.</p>
-      <a href="https://www.facebook.com/profile.php?id=100090702847661" target="_blank"><i class="bi bi-facebook fs-1 p-2 text-white"></i></a>
-         <a href="https://twitter.com/ZorsCode" target="_blank"><i class="bi bi-twitter fs-1 p-2 text-white"></i></a>
-         <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram fs-1 p-2 text-white"></i></a>
-         <a href="https://www.youtube.com/" target="_blank"><i class="bi bi-youtube fs-1 p-2 text-white"></i></a>
+      <a href="https://www.facebook.com/profile.php?id=100090702847661" title="Facebook" target="_blank"><i class="bi bi-facebook fs-1 p-2 text-white"></i></a>
+         <a href="https://twitter.com/ZorsCode" title="Twitter" target="_blank"><i class="bi bi-twitter fs-1 p-2 text-white"></i></a>
+         <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i class="bi bi-instagram fs-1 p-2 text-white"></i></a>
+         <a href="https://www.youtube.com/" title="YouTube" target="_blank"><i class="bi bi-youtube fs-1 p-2 text-white"></i></a>
     </div>
     <div class="card-footer text-white">
       <p>Copyright &copy; 2023 Breathe. Designed by <span>ZorsCode</span></p>
