--- a/gallery.html
+++ b/gallery.html
@@ -267,7 +267,7 @@
    
          <div class="carousel-inner">
            <div class="carousel-item active">
-             <a href="beginner.html#mountain" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y1b.jpeg" class="d-block w-100" alt="A lady with yoga pose"></a>
+             <a href="beginner.html#mountain" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y1b.jpeg" class="d-block w-100" alt="A lady with yoga pose" title="Click Me!"></a>
                <div class="carousel-caption">
                  <h5>Mountain Pose/Tadasana</h5>
                  <p>The mother of all yoga poses</p>
@@ -275,7 +275,7 @@
              </div>
    
            <div class="carousel-item">
-            <a href="beginner.html#dog" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y2b.jpeg" class="d-block w-100" alt="A lady with yoga pose"></a>
+            <a href="beginner.html#dog" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y2b.jpeg" class="d-block w-100" alt="A lady with yoga pose" title="Click Me!"></a>
              <div class="carousel-caption">
                <h5>Downward-Facing Dog</h5>
                <p>(Adho Mukha Svanansana)</p>
@@ -283,7 +283,7 @@
            </div>
    
            <div class="carousel-item">
-            <a href="beginner.html#war1" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y3b.jpeg" class="d-block w-100" alt="A lady with yoga pose"></a>
+            <a href="beginner.html#war1" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y3b.jpeg" class="d-block w-100" alt="A lady with yoga pose" title="Click Me!"></a>
              <div class="carousel-caption">
                <h5>Warrior I</h5>
                <p>The first in the Warrior series</p>
@@ -291,7 +291,7 @@
            </div>
    
            <div class="carousel-item">
-             <a href="beginner.html#war2" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y4b.jpeg" class="d-block w-100" alt="A lady with yoga pose"></a>
+             <a href="beginner.html#war2" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y4b.jpeg" class="d-block w-100" alt="A lady with yoga pose" title="Click Me!"></a>
              <div class="carousel-caption">
                <h5>Warrior II</h5>
                <p>Similar to Warrior I, Warrior II offers just a slight variation.</p>
@@ -325,7 +325,7 @@
         <div class="carousel-inner">
 
           <div class="carousel-item active">
-            <a href="beginner.html#wallpushup" style="text-decoration: none; color: white;"><img src="Gallery/lift/s8.webp" class="d-block w-100" alt="A man doing wall push-ups"></a>
+            <a href="beginner.html#wallpushup" style="text-decoration: none; color: white;"><img src="Gallery/lift/s8.webp" class="d-block w-100" alt="A man doing wall push-ups" title="Click Me!"></a>
             <div class="carousel-caption">
               <h5>Wall push up</h5>
               <p>Pump your chest in a wall!</p>
@@ -333,7 +333,7 @@
           </div>
 
           <div class="carousel-item">
-            <a href="beginner.html#squat" style="text-decoration: none; color: white;"><img src="Gallery/lift/s1.JPG" class="d-block w-100 " alt="A lady performing squats"></a>
+            <a href="beginner.html#squat" style="text-decoration: none; color: white;"><img src="Gallery/lift/s1.JPG" class="d-block w-100 " alt="A lady performing squats" title="Click Me!"></a>
               <div class="carousel-caption">
                 <h5>Squat</h5>
                 <p>Take your chances</p>
@@ -341,7 +341,7 @@
             </div>
   
           <div class="carousel-item">
-            <a href="beginner.html#reverselunge" style="text-decoration: none; color: white;"><img src="Gallery/lift/ss2.jpeg" class="d-block w-100" alt="Reverse lunge"></a>
+            <a href="beginner.html#reverselunge" style="text-decoration: none; color: white;"><img src="Gallery/lift/ss2.jpeg" class="d-block w-100" alt="Reverse lunge" title="Click Me!"></a>
             <div class="carousel-caption">
               <h5>Reverse Lunge</h5>
               <p>Take one step at a time</p>
@@ -349,7 +349,7 @@
           </div>
   
           <div class="carousel-item">
-            <a href="beginner.html#splitsquat" style="text-decoration: none; color: white;"><img src="Gallery/lift/splitsquat.jpg" class="d-block w-100 height-450" alt="..."></a>
+            <a href="beginner.html#splitsquat" style="text-decoration: none; color: white;"><img src="Gallery/lift/splitsquat.jpg" class="d-block w-100 height-450" alt="Split Squat" title="Click Me!"></a>
             <div class="carousel-caption">
               <h5>Split Squat</h5>
               <p>Curve the creation</p>
@@ -388,7 +388,7 @@
             </div>
   
           <div class="carousel-item">
-            <a href="beginner.html#highknee" style="text-decoration: none; color: white;"><img src="Gallery/aero/a2.jpeg" class="d-block w-100" alt="Jogging"></a>
+            <a href="beginner.html#highknee" style="text-decoration: none; color: white;"><img src="Gallery/aero/a2.jpeg" class="d-block w-100" alt="Two Men" title="Click Me!"></a>
             <div class="carousel-caption">
               <h5>Sweat with a Companion</h5>
               <p>Aerobics can be anywhere as long as you sweat!</p>
@@ -396,7 +396,7 @@
           </div>
   
           <div class="carousel-item">
-            <a href="beginner.html#jumpingjack" style="text-decoration: none; color: white;"><img src="Gallery/aero/jj_300x450.jpg" class="d-block w-100" alt="jumping"></a>
+            <a href="beginner.html#jumpingjack" style="text-decoration: none; color: white;"><img src="Gallery/aero/jj_300x450.jpg" class="d-block w-100" alt="Jumping" title="Click Me!"></a>
             <div class="carousel-caption">
               <h5>Jumping Jacks</h5>
               <p>Bring your own wand and move it around</p>
@@ -404,7 +404,7 @@
           </div>
   
           <div class="carousel-item">
-            <a href="beginner.html#walking" style="text-decoration: none; color: white;"><img src="Gallery/aero/a4.jpeg" class="d-block w-100" alt="Walking"></a>
+            <a href="beginner.html#walking" style="text-decoration: none; color: white;"><img src="Gallery/aero/a4.jpeg" class="d-block w-100" alt="Walking" title="Click Me!"></a>
             <div class="carousel-caption">
               <h5>Stretch in the cold</h5>
               <p>No exception! Just Do it!</p>
@@ -432,10 +432,10 @@
   <div class="card-body">
     <h5 class="card-title">It never ends here</h5>
     <p class="card-text">Our magazine is available online, so you can stay up-to-date on the latest health and fitness news anytime, anywhere.</p>
-    <a href="https://www.facebook.com/profile.php?id=100090702847661" target="_blank"><i class="bi bi-facebook fs-1 p-2 text-white"></i></a>
-         <a href="https://twitter.com/ZorsCode" target="_blank"><i class="bi bi-twitter fs-1 p-2 text-white"></i></a>
-         <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram fs-1 p-2 text-white"></i></a>
-         <a href="https://www.youtube.com/" target="_blank"><i class="bi bi-youtube fs-1 p-2 text-white"></i></a>
+    <a href="https://www.facebook.com/profile.php?id=100090702847661" title="Facebook" target="_blank"><i class="bi bi-facebook fs-1 p-2 text-white"></i></a>
+         <a href="https://twitter.com/ZorsCode" title="Twitter" target="_blank"><i class="bi bi-twitter fs-1 p-2 text-white"></i></a>
+         <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i class="bi bi-instagram fs-1 p-2 text-white"></i></a>
+         <a href="https://www.youtube.com/" title="YouTube" target="_blank"><i class="bi bi-youtube fs-1 p-2 text-white"></i></a>
   </div>
   <div class="card-footer text-white">
     <p>Copyright &copy; 2023 Breathe. Designed by <span>ZorsCode</span></p>
